8.3.0/components/caption.mdx
---
description: Компонент для отображения мелких подписей — аннотаций к изображениям, временных меток, вспомогательных аннотаций и другого вторичного текста минимального размера.
tags: caption, secondary
---

<Overview group="typography" forcedPath="components/Typography/Caption/Caption.tsx">

# Caption [tag:component]

Компонент для отображения мелких подписей — аннотаций к изображениям, временных меток,
вспомогательных аннотаций и другого вторичного текста минимального размера.

</Overview>

{/* @example-description: Три уровня Caption для сравнения размеров. */}
<Playground>
  ```jsx
  <Flex direction="column">
    <Caption level="1">Caption уровень 1</Caption>
    <Caption level="2">Caption уровень 2</Caption>
    <Caption level="3">Caption уровень 3</Caption>
  </Flex>
  ```
</Playground>

## Свойства и методы [#api]

| Свойство | Тип | По умолчанию | Описание |
| --- | --- | --- | --- |
| `align` | `"start" \| "center" \| "end"` | `-` | Выравнивание текста. Не имеет эффекта при inline={true}. |
| `caps` | `boolean` | `-` | Отображение текста в верхнем регистре. |
| `Component` | `ElementType<any, keyof IntrinsicElements>` | `span` |  |
| `getRootRef` | `Ref<HTMLElement>` | `-` |  |
| `inline` | `boolean` | `false` | Делает блок инлайновым. |
| `level` | `"1" \| "2" \| "3"` | `1` | Уровень заголовка (от 1 до 3). |
| `normalize` | `boolean` | `true` | Убирает внешние отступы. |
| `useAccentWeight` | `boolean` | `-` | Включает акцентный тип начертания шрифта. Используются токены fontWeightAccent[1, 2, 3] Используется только вместе с `weight`. |
| `weight` | `"1" \| "2" \| "3"` | `-` | Задаёт начертание шрифта, отличное от стандартного. |

